changed version and name in bower.json

--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
-  "name": "angularjs-datepicker",
-  "version": "0.2.22-beta",
+  "name": "720angularjs-datepicker",
+  "version": "0.3",
   "description": "A datepicker directive for angularjs.",
   "authors": [
     "Filippo Oretti <filippo.oretti@gmail.com",
